--- a/src/App.scss
+++ b/src/App.scss
@@ -64,7 +64,8 @@ $side-panel-width: 20vw;
     h3 {
       margin: .5em 0;
       padding: .5em 0;
-      font-size: 160%
+      font-size: 160%;
+      color: $ge-green;
     }
 
     h4 {
