Added CountUp as dep. Added InstrumentPanel component to make you feel like moving through space.

--- a/src/App.scss
+++ b/src/App.scss
@@ -91,3 +91,13 @@ $side-panel-width: 20vw;
     }
   }
 }
+
+.instrument-panel {
+  text-align: left;
+  padding: 1em;
+  color: white;
+
+  strong {
+    color: $ge-yellow;
+  }
+}
