--- a/src/App.scss
+++ b/src/App.scss
@@ -94,8 +94,14 @@ $side-panel-width: 20vw;
 
 .instrument-panel {
   text-align: left;
-  padding: 1em;
+  padding: 1em 1.5em;
   color: white;
+
+  .panel-field {
+    padding: .5rem 0;
+    margin: 0;
+    border-bottom: 1px solid rgba(white, .3);
+  }
 
   strong {
     color: $ge-yellow;
