--- a/src/styles/_logo-svg.scss
+++ b/src/styles/_logo-svg.scss
@@ -1,13 +1,15 @@
-.ge-logo-svg {
-  max-width: 16vw;
-  margin: 0 auto;
-  padding: 1em;
-
+#ge-logo-mark {
+  padding-top: 2em;
+  
   .cls-1 {
     fill: $ge-yellow;
   }
 
-  .cls-2 {
-    fill: none;
+  #armillary {
+    position: relative;
+  }
+
+  #inner-arm-one {
+
   }
 }
