--- a/src/styles/_logo-svg.scss
+++ b/src/styles/_logo-svg.scss
@@ -1,3 +1,8 @@
+@keyframes rotation {
+    from { transform: rotate(0deg) translateX(150px) rotate(0deg); }
+    to   { transform: rotate(360deg) translateX(150px) rotate(-360deg); }
+}
+
 #ge-logo-mark {
   padding-top: 2em;
   
@@ -10,6 +15,10 @@
   }
 
   #inner-arm-one {
+    fill: $ge-green;
+  }
 
+  #inner-arm-two {
+    fill: white;
   }
 }
