--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,10 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 
 .App {
   text-align: center;
+
+  * {
+    transition: all .2s;
+  }
 }
 
 h1,
@@ -116,5 +120,22 @@ $side-panel-width: 20vw;
 
   p {
     width: 50%;
+  }
+}
+
+.stream a {
+  padding: 1em 1.5em;
+  margin: 0 .5rem .5rem 0;
+  text-align: center;
+  color: $ge-green;
+  text-transform: uppercase;
+  background-color: rgba(black, .5);
+  text-decoration: none;
+  border: 2px solid transparent;
+
+  &:hover {
+    color: $ge-yellow;
+    border-color: $ge-yellow;
+    background-color: rgba($ge-green, .3);
   }
 }
