--- a/src/styles/_logo-svg.scss
+++ b/src/styles/_logo-svg.scss
@@ -17,6 +17,7 @@
 
 #ge-logo-mark {
   padding: 2em 0 0 .5em;
+  max-width: 15em;
   
   .cls-1 {
     fill: $ge-yellow;
@@ -55,7 +56,6 @@
 
     &:hover {
       fill: $ge-yellow;
-      opacity: 1;
     }
   }
 
@@ -65,7 +65,6 @@
 
     &:hover {
       fill: $ge-green;
-      opacity: 1;
     }
   }
 }
