--- a/src/App.scss
+++ b/src/App.scss
@@ -164,9 +164,17 @@ $side-panel-width: 20vw;
   display: flex;
   flex-wrap: wrap;
 
+  @media screen and (max-width: $very-small-screen) {
+  	display: block;
+  }
+
   p {
     width: 50%;
     color: white;
+    
+    @media screen and (max-width: $very-small-screen) {
+		width: 100%;
+	}
   }
 }
 
