--- a/src/styles/_instruments-widget.scss
+++ b/src/styles/_instruments-widget.scss
@@ -6,7 +6,7 @@
     transform: translateY(140px);
   }
   100% {
-    transform: translateY(-10px);
+    transform: translateY(0px);
   }
 }
 
@@ -17,8 +17,11 @@
   30% {
     transform: translateY(160px);
   }
-  100% {
+  90% {
     transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(0px);
   }
 }
 
@@ -32,8 +35,11 @@
   70% {
     transform: translateY(60px);
   }
-  100% {
+  90% {
     transform: translateY(175px);
+  }
+  100% {
+    transform: translateY(0px);
   }
 }
 
@@ -47,8 +53,11 @@
   70% {
     transform: translateX(150px);
   }
-  100% {
+  90% {
     transform: translateY(157px);
+  }
+  100% {
+    transform: translateY(0px);
   }
 }
 
@@ -87,7 +96,7 @@
 
 	.text-panel-text {
 		fill: $ge-yellow !important;
-		animation: outThenIn 5s infinite;
+		animation: outThenIn 2s infinite;
 	}
 
 	.switch {
