--- a/src/styles/_star-generator.scss
+++ b/src/styles/_star-generator.scss
@@ -17,6 +17,6 @@
 		border-radius: 50%;
 		background-color: white;
 		position: absolute;
-		animation: floatOff 200s forwards;
+		/*animation: floatOff 200s forwards;*/
 	}
 }
