--- a/src/styles/_accordion.scss
+++ b/src/styles/_accordion.scss
@@ -1,4 +1,5 @@
 @import './_typog.scss';
+@import './_breakpoints.scss';
 
 .ge-accordion {
 	
@@ -33,5 +34,13 @@
 
 	.ge-accordion-content {
 		padding: 0 0 0 2em;
+	}
+
+	.ge-accordion-title {
+		text-align: left !important;
+
+		 @media screen and (max-width: $small-screen) {
+		  	font-size: 100%;
+		 }
 	}
 }
