Stars polish and added description.

--- a/src/App.scss
+++ b/src/App.scss
@@ -153,16 +153,16 @@ $trans-bg: rgba(black, .7);
 
     .album-info {
       padding-bottom: 1em;
-
-      span {
-
-      }
     }
 
     img {
       border: 5px solid white;
     }
   }
+}
+
+.ge-description {
+	color: white;
 }
 
 .instrument-panel {
