--- a/src/styles/_star-generator.scss
+++ b/src/styles/_star-generator.scss
@@ -1,6 +1,12 @@
-@keyframes floatOff {
-  to {
-    top: -400em;
+@keyframes warpSpeed {
+  0% {
+  	opacity: 0;
+  }	
+  50% {
+  	opacity: 1;
+  }
+  90% {
+    opacity: 0;
   }
 }
 
@@ -17,6 +23,7 @@
 		border-radius: 50%;
 		background-color: white;
 		position: absolute;
-		/*animation: floatOff 200s forwards;*/
+		animation: warpSpeed 20s forwards;
+		animation-delay: 10s;
 	}
 }
