--- a/src/styles/_star-generator.scss
+++ b/src/styles/_star-generator.scss
@@ -3,10 +3,12 @@
   	opacity: 0;
   }	
   50% {
-  	opacity: 1;
+  	opacity: .7;
   }
-  90% {
+  99% {
     opacity: 0;
+    width: 2px;
+    height: 1000%;
   }
 }
 
@@ -23,7 +25,7 @@
 		border-radius: 50%;
 		background-color: white;
 		position: absolute;
-		animation: warpSpeed 20s forwards;
-		animation-delay: 10s;
+		animation: warpSpeed 5s forwards;
+		animation-delay: 36s;
 	}
 }
