--- a/src/styles/_accordion.scss
+++ b/src/styles/_accordion.scss
@@ -19,6 +19,10 @@
 		h2 {
 			border-color: rgba(white, .4);
 		}
+
+		.ge-accordion-content {
+			/*background-color: $ge-blue;*/
+		}
 	}
 
 	.indicator {
@@ -32,13 +36,15 @@
 	}
 
 	.ge-accordion-content {
-		padding: 0 0 0 2em;
+		padding: .25rem 0 .25rem 2em;
+		margin: 0;
 	}
 
 	.ge-accordion-title {
 		text-align: left !important;
 		color: $ge-green;
-    font-family: $app-font;
+    	font-family: $app-font;
+    	margin-bottom: 0;
 
 		 @media screen and (max-width: $small-screen) {
 		  	font-size: 100%;
