--- a/src/styles/_accordion.scss
+++ b/src/styles/_accordion.scss
@@ -18,10 +18,7 @@
 	&.open {
 		h2 {
 			border-color: rgba(white, .4);
-		}
-
-		.ge-accordion-content {
-			/*background-color: $ge-blue;*/
+			margin-bottom: .5em;
 		}
 	}
 
