Added calendar section.

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
 @import './styles/_accordion.scss';
 @import './styles/_typog.scss';
 @import './styles/_breakpoints.scss';
+@import './styles/_calendar.scss';
 
 html,
 body {
