--- a/src/styles/_calendar.scss
+++ b/src/styles/_calendar.scss
@@ -8,9 +8,17 @@ $smallTextSize: 85%;
     background-color: rgba(black, .5);
     border-radius: 2%;
 
+    @media only screen and (max-width: 500px) {
+      display: block;
+    }    
+
     section {
       padding: .5em 3em;
     }
+
+    @media only screen and (max-width: 500px) {
+      padding: .5em 1em;
+    }  
   }
 
   .date {
@@ -18,6 +26,10 @@ $smallTextSize: 85%;
     font-family: $app-font;
     color: $ge-green;
     border-right: $calendarBorder;
+
+    @media only screen and (max-width: 500px) {
+      border-right: none;
+    }  
 
     .day {
       font-size: 240%;
@@ -33,6 +45,11 @@ $smallTextSize: 85%;
     text-align: left;
     width: 60%;
     border-right: $calendarBorder;
+
+    @media only screen and (max-width: 500px) {
+      border-right: none;
+      text-align: center;
+    }   
 
     .venue-name {
       a {
@@ -59,6 +76,10 @@ $smallTextSize: 85%;
     font-size: 160%;
     color: $ge-green;
   }
+
+  @media only screen and (max-width: 500px) {
+      text-align: center;
+    }  
 
   p {
     margin: 0;
