--- a/src/App.scss
+++ b/src/App.scss
@@ -287,3 +287,7 @@ $trans-bg: rgba(black, .7);
 .gb-embed {
   border: 0; width: 100%; height: 42px;
 }
+
+.bandcamp-embed {
+  border: 0; width: 100%; height: 120px;
+}
