--- a/src/App.scss
+++ b/src/App.scss
@@ -147,7 +147,7 @@ $trans-bg: rgba(black, .7);
       margin: 0 0 .5em 0;
       padding: 0;
       font-size: 250%;
-      color: $ge-green;
+      color: $ge-blue2;
       font-family: $app-font;
       line-height: 1;
     }
