--- a/src/styles/_logo-svg.scss
+++ b/src/styles/_logo-svg.scss
@@ -1,3 +1,12 @@
+@keyframes blink {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .cls-1{
   fill:#011b39;
 }
@@ -14,4 +23,24 @@
   padding-top: 1rem;
   max-width: 300px;
   margin: 0 auto;
+
+  .star.left {
+    animation: blink 5s infinite forwards;
+    animation-delay: 0.5s;
+  }
+
+  .star.center {
+    animation: blink 5s infinite forwards;
+    animation-delay: 1s;
+  }
+
+  .star.near-right {
+    animation: blink 5s infinite forwards;
+    animation-delay: 1.5s;
+  }
+
+  .star.far-right {
+    animation: blink 5s infinite forwards;
+    animation-delay: 2s;
+  }
 }
