--- a/src/styles/_typog.scss
+++ b/src/styles/_typog.scss
@@ -1,2 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 $app-font: 'Permanent Marker', cursive;
+$header-font: 'Montserrat', sans-serif;
