instrument widget polish

--- a/src/App.scss
+++ b/src/App.scss
@@ -169,6 +169,8 @@ $trans-bg: rgba(black, .7);
       font-family: $header-font;
       text-transform: uppercase;
       color: $ge-blue2;
+      font-weight: bold;
+      font-size: 1.25rem;
     }
 
     img {
